updated docker compose + misc

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_VERSION="0.0.1"  # Note: Version is managed in pyproject.toml, update using 
 DEBUG=false
 
 # API Settings
-API_V1_PREFIX="/api/v1"
+API_PREFIX="/api/v1"
 
 # Database Settings - Option 1: Full connection string
 DATABASE_URL="mssql+pyodbc://sa:YourStrong@Passw0rd@localhost:1433/process_monitor?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes"
