--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,16 @@ dependencies = [
     "python-multipart>=0.0.6",
     "python-jose[cryptography]>=3.3.0",
     "fastapi-pagination>=0.14.3",
+    "openpyxl >= 3.1.2",
+    "requests_ntlm >= 1.2.0",
+    "python-dateutil == 2.9.*",
+    "cryptography >= 43.0.0",
+    "office365-rest-python-client",
+    "Pillow == 11.0",
+    "portalocker",
+    "mbu-dev-shared-components >= 0.4.1",
+    "pandas",
+    "beautifulsoup4",
 ]
 
 [project.optional-dependencies]
